--- a/index.html
+++ b/index.html
@@ -4,12 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | News homepage</title>
 </head>
 <body>
+  <div class="menu">
+    <img  class="icon-menu-close" src="./assets/images/icon-menu-close.svg" alt="">
+    <ul>
+      <li>Home</li>
+      <li>New</li>
+      <li>Popular</li>
+      <li>Trending</li>
+      <li>Categories</li>
+    </ul>
+  </div>
 <nav>
   <img src="./assets/images/logo.svg" alt="Logo">
+  <div class="menu-icon"><img src="./assets/images/icon-menu.svg" alt="Icon menu"></i></div>
   <ul>
     <li>Home</li>
     <li>New</li>
@@ -81,5 +93,6 @@
   </div>
     
 </section>
+<script src="index.js"></script>
 </body>
 </html>
